# ArmadilloWrapper

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt
inc/: Datastructure.hpp  Random.hpp  compute.hpp
src/: compute.cpp
tests/: CMakeLists.txt  runtest.cpp  test1.cpp
